--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: ternakin
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 homepage:
 version: 1.0.0+1
 
 environment:
   sdk: ^3.7.2
   flutter: ^3.13.0
-  
+
 dependencies:
   flutter:
     sdk: flutter
@@ -16,19 +16,26 @@ dependencies:
   google_fonts: ^6.1.0
   image_picker: ^0.8.7
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.3.10  # ✅ Tambahkan ini
 
 flutter:
 
   uses-material-design: true
 
   assets:
-    - assets/images/logo.jpg
-    - assets/images/google.jpg
+    - assets/images/logo.png
+    - assets/images/google.png
+    - assets/images/cipaaa.png
 
-
+flutter_native_splash:
+  color: "#ffffff"     
+  image: assets/images/logo.png
+  branding: assets/images/google.png 
+  android: true
+  ios: true
+  fullscreen: true
+  web: true
