--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage:
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">=3.0.0 <3.7.2"
   flutter: ^3.13.0
   
 dependencies:
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
   image_picker: ^0.8.7
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
 
 
 dev_dependencies:
