--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  flutter_native_splash: ^2.3.10  # ✅ Tambahkan ini
+  flutter_native_splash: ^2.3.10 
 
 flutter:
 
