--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   image_picker: ^0.8.7
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  firebase_storage: ^12.4.9
+  supabase_flutter: ^2.9.1
+  flutter_dotenv: ^5.2.1
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +36,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/google.png
     - assets/images/cipaaa.png
+    - .env
 
 flutter_native_splash:
   color: "#ffffff"     
