--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ homepage:
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <3.7.2"
-  flutter: ^3.13.0
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: 3.32.0
 
 dependencies:
   flutter:
